option java_package = "proto.message";
package proto.message;

/*
enum ErrorCode_SC_MsgID
{
	ErrorCode_SC_ErrorCodeMsg 	= 20000; //服务器主动推送错误码消息
}
*/

message ErrorCode_SC_ErrorCodeMsg
{
	optional int32 nResult = 1;
}


message NullMessage
{
}

//3D坐标
message Point3D 
{
	optional float x = 1;
	optional float y = 2;
	optional float z = 3;
}

//4D坐标
message Point4D
{
	optional float x = 1;
	optional float y = 2;
	optional float z = 3;
	optional float w = 4;
}

//ID数量
message IDNum
{
	optional int32 id 		= 1; //ID
	optional int32 num 		= 2; //数量
}


message KeyValue
{
	optional int32 key		= 1; //
	optional int32 iValue	= 2; //32整形值
	optional int64 lValue  	= 3;  //64整形值
	optional float fValue  	= 4;  //浮点值
	optional string szValue = 5;  //字符串值
}

message ActivityData
{
	optional int32 activityid = 1; //活动ID
	repeated KeyValue kv = 2;	//键值数组
}


message PairInt32
{
	optional int32 first 		= 1; 
	optional int32 second 		= 2; 
}

//ID次数
message IDTimes
{
	optional int32 id 		= 1;
	optional int32 times 	= 2;
}


message EquipEffect
{
	optional int32 etype 		= 1; //层次类型(主要/次要/特殊/附魔)
	optional int32 eff_id 		= 2; //属性表格ID
	optional int32 eff_type 	= 3; //属性类型(数值/百分比...)
	optional int32 data_type 	= 4; //属性数据类型
	optional int32 data_num 	= 5; //属性数据
}


//装备
message Equip
{
	optional uint64 uuid 			= 1; //装备唯一ID
	optional string charname 		= 2; //制造者
	optional uint64 gain_time 		= 3; //获得时间
	optional int32 id 				= 4; //装备ID
	optional int32 level			= 5; //装备等级
	optional int32 is_equipon		= 6; //是否穿戴(1:是 0:否)
	optional int32 strength_lv		= 7; //强化的等级
	optional int32 increase_percent	= 8; //增幅的百分比
	optional int32 durability		= 9; //耐久度
	optional int32 times 			= 10; //修理次数

	repeated EquipEffect effect_list= 11; //属性列表

	optional int32 source 			= 12; //物品来源
	optional int32 frozen_time 		= 13; //冻结到期时间
	optional uint32 exp 				= 14; //经验
	optional uint32 bind 				= 15; //是否绑定  1是 0否
	repeated IDNum best_attr		= 16; //绝品属性
}


message DiamondDoubleHistory
{
	optional   string   name = 1;   //名称
	optional   uint32   dimaond = 2;   //获得钻石数量
}

message BatSkillInfo
{
	optional int32   playerskillid 	=1;
	optional int32   effectid		=2;
	optional int32   pos			=3;
	optional int32   curmark		=4;
	repeated int32	 markid			=5;
	optional int32   level			=6; 
	optional int32   effectid2		=7;
	
}

message PlayerEffect
{
	repeated int32 attdata 		= 1;
}


message BattlePlayerInfo
{
	required uint32 nplayerid 	= 1;	//玩家ID（本次登陆的）
	required Point3D pt 		= 2;	//坐标
	required float  dir 		= 3;	//朝向
	optional string name 		= 4;    //名字
	optional int32 curhp       	= 5;    //当前血量
	repeated int32 attvalue		= 6;	//玩家基础属性(值)	
	repeated int32 attprecent	= 7;	//玩家基础属性(百分比)
	optional int32 level       	= 8;    //等级
	repeated Equip equip_list 	= 9; 	//装备列表
	optional int32 career 		= 10; 	//职业
	optional int32 velocity     = 11;   //移动速度
	optional int32 titleID		= 12;	//称号id
	optional int32 layer        = 13;   //层级
	optional string titlename   = 14; 	//称号要使用的名称 有可能是公会名 有可能是导师名
	optional int32 titleishide 	= 15; 	//称号当前是否隐藏
	repeated BatSkillInfo skilllist=16; //技能ID列表
	optional uint64 nplayeruuid = 17;    //64位ID
	optional uint64 nguildid 	= 18;	 //公会64位ID
	optional string guildName  	= 19; 	 //公会名称
	optional uint32 xpenergy	= 20;	 //怒气值
	optional uint32 serverid	= 21;	 //服务器ID
	optional int32  teamid		= 22; 	 //队伍id
	optional int32  pvpscore	= 23;	 //PVP积分
	optional int32  pvpteam		= 24; 	 //PVP队伍
	optional int32 cur_petid = 25; 		 //当前宠物ID
	optional int32 cur_rideid = 26; 	 //当前坐骑ID
	optional int32 cur_awakenid = 27;  	 //当前觉醒ID
	optional int32 cur_mercenaryid = 28; //当前佣兵ID		
	optional uint32 nmercenary_linkid = 29; //佣兵linkID
	optional uint32 curtp			=30; //当前体力值  
	optional uint32 suitid			=31; //当前套装ID  
	optional uint32 pkval		    =32; //善恶值
	optional uint32 cur_avatarid		=33; //当前时装ID
	optional uint32 cur_avatarcolorid		=34; //当前时装颜色ID
	optional uint32 attackmode		=35; //pk模式
	optional uint32 dhlevel	= 36; //猎魔人等级
	required uint32 linkid 	= 37;	//玩家linkID
	optional BattleHeadInfo headinfo =38; // 玩家头顶信息
	repeated uint32 mercenaryscript = 39;//当前佣兵触发脚本
	repeated uint32 ridescript = 40;//当前坐骑触发脚本
	repeated uint32 awakenscript = 41;//当前觉醒触发脚本
	optional uint32 cur_petrank = 42; 		 //当前宠物ID
	optional uint32 cur_mercenrank = 43; //当前佣兵ID	

	//只发给其他玩家的时候才有数据
	optional int32 maxtp        = 44;//当前最大体力值
	optional int32 maxhp        = 45;//当前最大生命值
    optional int32 baseequip    = 46; //所有已装备装备的基础战力
}
message BattleMercenaryInfo
{
	required uint32 nmercenaryid 	= 1;	//佣兵linkID
	required uint32 nTableid = 2; // 佣兵表格ID
	required Point3D pt 		= 3;	//坐标
	required float  dir 		= 4;	//朝向
	optional string name 		= 5;    //名字
	optional int64 curhp       = 6;    	//当前血量
	repeated int32 attvalue		= 7;	//佣兵基础属性(值)	
	optional int32 level       	= 8;    //等级
	optional int32 velocity     = 9;   //移动速度
	optional int32 layer        = 10;   //层级
	optional int32 ncampid = 11;    //阵营
	repeated int32 skilllist=12; //技能ID列表
	optional int32 ranking =13;	//排名 
}
message BattleSingleHeadInfo
{
	optional int32 ntype = 1;//类型 1.名字 2.等级 3. 猎魔等级 4. 威望品阶 5.公会 6.组队 7.称号
	optional int32 plyid = 2 ;//玩家ID
	optional int32 param1 = 3;
	optional int32 param2 = 4; //称号时 作是否隐藏
	optional int64 param3 = 5;
	optional string param4 = 6;
}
message BattleHeadInfo
{
	repeated BattleSingleHeadInfo infolist = 1;//玩家头顶信息
}

message BattleBoatInfo
{
    optional int32 boatid 		= 1; //船舰id
	optional int32 skinid     	= 2;   //皮肤ID
	repeated int32 landskill	= 3; //陆战技能
	repeated int32 seaskill		= 4; //海战技能
}

message MatchPlayerInfo
{
	optional int32 iScore 	= 1; //积分
	optional int32 iMatchScore 	= 2; //匹配积分
	optional BattlePlayerInfo sPlyInfo = 3; //玩家信息
}

message WolrdBossSaledItem
{	
	optional	IDNum	sItemInfo = 1;	//掉落道具
	optional	string	uiPlayerName = 2;  //获得者
	optional	uint32  uiBossId = 3;	//bossid
	optional	uint32	uiPrice = 4;  //成交金额
	optional	uint64  uiPlayerUUID = 5;	//playerid
}

message OfflineDataDetail
{
	repeated int32 playerskill=1; 	   	//玩家技能
	optional PlayerEffect playeratt=2; 	//属性
	optional int32 artifactid=3; 		//神器ID
	repeated int32 artifactskill=4; 	//神器技能
	optional int32 petid=5; 			//宠物ID
	optional int32 boatid =6;			//船舰ID
	optional int32 boatskin=7;			//船舰皮肤
	repeated int32 boatskill=8;			//船舰技能
	optional int32 awakenid=9;			//觉醒ID
	optional int32 warlordid=10; 		//佣兵ID
	optional int32 fightvalue=11; 		//战斗力
	optional int32 skinid=12; 			//时装ID
}

message MailToMap
{
	optional uint32 dropid = 1;	//掉落ID不为0 则走掉落,2,3参数无效
	optional int32	itemid =2;
	optional int32 	itemnum =3;
	repeated uint64 rolelist =4;
	optional uint32 mailid =5;	
	optional string context=6;
}


message DreadDungeonData
{
	optional uint32 secenID = 1;
	optional uint32 counts = 2;
}


//*****************************玩家离线数据****************************************
message PlayerBaseData
{
	optional uint64 charid 		 = 1;  //唯一ID
	optional string charname 	 = 2;  //玩家名字
	optional uint64 guildid		 = 3;  //公会ID
	optional string guildname    = 4;  //公会名
	optional uint32 career		 = 5;  //职业
	optional uint32 dhlev		 = 6;  //猎魔人等级	
	optional uint32 level		 = 7;  //等级
	optional uint32 fightval	 = 8;  //战斗力
	optional uint32 skinid 		 = 9;  //皮肤ID
	optional uint32 weaponskin 	 = 10; //武器皮肤
	optional uint32 suitid		 = 11; //套装
	repeated uint32 equiplist	 = 12; //装备列表
	repeated uint32 attribut	 = 13; //属性列表	
}
message GrowData 					
{
	optional uint32 exid=1;
	optional uint32 fitvalue=2; 
	repeated uint32 equiplist =3;
	repeated uint32 skilllist=4;
	repeated uint32 skilllev=5;
	optional uint32 eatcounts=6; 	//潜能丹个数
	repeated uint32 attribut=7; 	//属性列表
	repeated uint32 talent=8; 		//天赋	
}

message ShowDataDetail
{
	optional GrowData awaken =1;
	optional GrowData ride =2;
	repeated GrowData pet=3;
	repeated GrowData mercenary=4;
	repeated GrowData godweapon=5;
}

message PlayerShow
{
	optional PlayerBaseData 	basedata 	= 1; //玩家基础数据
	optional ShowDataDetail 	offdata  	= 2; //成长系统离线数据
}


message TBSyncFlagPos					//领地争霸旗帜的位置同步
{
	optional Point3D pt = 1;			//坐标
	optional uint32  flagobjid =2;	 	//在谁身上 0表示在初始地点 
	optional uint64  getguildid=3;		//夺旗者公会ID 默认0
	optional string  getguildname=4;	//夺旗者公会名 默认""
	optional uint32  getflagtime =5;	//持有时间
	optional uint64  onwergid = 6;		//地区原所属公会 0表示没有被占领(战斗结算前不会变)
	optional string	 ownername= 7;		//地区原所属公会名字
}  
	        
message TBFieldInfo						//领地信息
{
	optional uint32 id =1;				//reward表中的ID
	optional uint32 mapid =2;			
	optional uint64 guildid=3;
	optional string guildname=4;
	optional uint32 overtime=5;
}

message TBKillReward					//领地争霸 杀人奖励
{
	repeated uint32 itemid =1;
	repeated uint32 num=2;
}


message TBPlayer
{
	optional uint64  playerid =1;
	optional uint64  guildid = 2;
	optional uint32  onlinetime=3;
}

message TBOverResultInfo				//领地争霸结束奖励结算
{
	optional uint32 id	= 1;			//领地ID(rewardpvp表 ID)
	optional uint64 wingid = 2;			//占领公会ID
	optional string winname = 3;		//占领公会名字 
	optional uint64 losegid = 4;		//失守公会ID 0表示没有争夺成功
	repeated TBPlayer playeridlist = 5;	//玩家列表
	optional uint32 serverid = 6;
	
}
















